[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/admin/confirm_dialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.184, 0.192, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 24.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="confirm_btn_normal"]
bg_color = Color(0.345, 0.396, 0.949, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="ConfirmDialog" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(380, 0)
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"
theme_override_font_sizes/font_size = 18

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Header"]
layout_mode = 2
text = "âœ•"
flat = true

[node name="Message" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Are you sure?"
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 8

[node name="CancelButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(80, 36)
text = "Cancel"
flat = true

[node name="ConfirmButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(80, 36)
text = "Confirm"
theme_override_styles/normal = SubResource("confirm_btn_normal")
